# nvidia-docker-setup

./: .gitignore  CLAUDE.md  README.md  install.sh  main.py  pyproject.toml  setup.sh
configs/: cuda_versions.json  vulkan_versions.json
nvidia_driver_setup/: __init__.py  __main__.py  cli.py  updater.py
nvidia_driver_setup/docker/: __init__.py  config.py  setup.py
nvidia_driver_setup/nvidia/: __init__.py  cuda.py  cuda_toolkit.py  drivers.py  patches.py  vulkan.py
nvidia_driver_setup/system/: __init__.py  checks.py
nvidia_driver_setup/utils/: __init__.py  logging.py  prompts.py  system.py
scripts/: nvenc-patch.sh
src/: __init__.py
src/docker/: __init__.py  config.py  setup.py
src/nvidia/: __init__.py  cuda.py  drivers.py  patches.py  vulkan.py
src/system/: __init__.py  checks.py
src/utils/: logging.py  prompts.py  system.py
templates/: docker-daemon-cgroupfs.json  docker-daemon.json  dovi5-to-sdr.js  mod-vulkan.sh  plex-nvidia.yml
